# epd-wm

./: .gitmodules  Dockerfile  LICENSE  README.md  cage.c  config.h.in  docker-compose.yml  epd.c  epd_backend.c  epd_wm.c  meson.build  meson_options.txt  pgm.h  ubuntu-dev-requirements.txt  ubuntu-requirements.txt
epd/: epd_backend.c  epd_backend.h  epd_demo.c  epd_driver.c  epd_driver.h  epd_output.c  epd_output.h
hacks/: wlr_backend_multi.h  wlr_utils_signal.c  wlr_utils_signal.h
utils/: image-four-bit.pgm  image-one-bit.pgm  image-two-bit.pgm  image.pgm  pgm.c  pgm.h  time.c  time.h
wm/: idle_inhibit_v1.c  output.c  output.h  seat.c  seat.h  server.h  view.c  view.h  xdg_shell.c  xdg_shell.h  xwayland.c  xwayland.h
